[package]
name = "ecoblock_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
ecoblock-gossip = { path = "../ecoblock-gossip" }
ecoblock_mesh   = { path = "../ecoblock-mesh" }
ecoblock_core = { path = "../ecoblock-core" }
ecoblock-storage = { path = "../ecoblock-storage" }
ecoblock_crypto = { path = "../ecoblock-crypto" }
ecoblock-logger = { path = "../ecoblock-logger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
